--- a/realtors/realtors/Base.lproj/Main.storyboard
+++ b/realtors/realtors/Base.lproj/Main.storyboard
@@ -164,58 +164,91 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" misplaced="YES" axis="vertical" alignment="center" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="LKB-Ni-nCx">
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="LKB-Ni-nCx">
                                 <rect key="frame" x="20" y="69" width="374" height="711"/>
                                 <subviews>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="tYn-B0-P0S">
-                                        <rect key="frame" x="30" y="0.0" width="314" height="209"/>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="tYn-B0-P0S">
+                                        <rect key="frame" x="0.0" y="0.0" width="374" height="209"/>
                                         <animations/>
                                         <constraints>
+                                            <constraint firstAttribute="width" secondItem="tYn-B0-P0S" secondAttribute="height" multiplier="3:2" id="FBX-ff-zop"/>
                                             <constraint firstAttribute="width" secondItem="tYn-B0-P0S" secondAttribute="height" multiplier="3:2" id="HN2-nZ-RHn"/>
                                         </constraints>
+                                        <variation key="default">
+                                            <mask key="constraints">
+                                                <exclude reference="FBX-ff-zop"/>
+                                                <exclude reference="HN2-nZ-RHn"/>
+                                            </mask>
+                                        </variation>
                                     </imageView>
-                                    <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Efd-Hk-JIB">
+                                    <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Efd-Hk-JIB">
                                         <rect key="frame" x="0.0" y="229" width="374" height="482"/>
                                         <subviews>
-                                            <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" axis="vertical" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="cI0-Yv-z1H">
+                                            <stackView opaque="NO" contentMode="scaleToFill" misplaced="YES" axis="vertical" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="cI0-Yv-z1H">
                                                 <rect key="frame" x="21" y="20" width="374" height="446"/>
                                                 <subviews>
-                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Address" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QgX-59-oWI">
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Address" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QgX-59-oWI">
                                                         <rect key="frame" x="153" y="0.0" width="68" height="21"/>
                                                         <animations/>
                                                         <accessibility key="accessibilityConfiguration" identifier="addressLabel" label=""/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="height" constant="21" id="w5Q-r0-40D"/>
+                                                        </constraints>
                                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                         <nil key="highlightedColor"/>
+                                                        <variation key="heightClass=regular-widthClass=regular">
+                                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
+                                                        </variation>
                                                     </label>
-                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Summary" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MFP-JF-I5u">
-                                                        <rect key="frame" x="151" y="21" width="73" height="21"/>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Summary" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MFP-JF-I5u">
+                                                        <rect key="frame" x="151" y="21" width="73" height="20"/>
                                                         <animations/>
                                                         <accessibility key="accessibilityConfiguration" identifier="summaryLabel"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                         <nil key="highlightedColor"/>
+                                                        <variation key="heightClass=regular-widthClass=regular">
+                                                            <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                                        </variation>
                                                     </label>
-                                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" layoutMarginsFollowReadableWidth="YES" text="Features" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="LqA-C0-KQm">
+                                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" layoutMarginsFollowReadableWidth="YES" text="Features" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="LqA-C0-KQm">
                                                         <rect key="frame" x="12" y="41" width="350" height="405"/>
                                                         <animations/>
                                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                         <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                                        <variation key="heightClass=regular-widthClass=regular">
+                                                            <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                                        </variation>
                                                     </textView>
                                                 </subviews>
                                                 <animations/>
+                                                <constraints>
+                                                    <constraint firstItem="LqA-C0-KQm" firstAttribute="top" secondItem="QgX-59-oWI" secondAttribute="bottom" constant="20" id="8Ok-sl-fxr"/>
+                                                    <constraint firstItem="LqA-C0-KQm" firstAttribute="leading" secondItem="cI0-Yv-z1H" secondAttribute="leading" constant="12" id="mte-t0-BXH"/>
+                                                    <constraint firstAttribute="height" constant="446" id="ylE-cm-vKF"/>
+                                                </constraints>
                                             </stackView>
                                         </subviews>
                                         <animations/>
                                         <constraints>
                                             <constraint firstItem="cI0-Yv-z1H" firstAttribute="leading" secondItem="Efd-Hk-JIB" secondAttribute="leading" id="bod-rv-djQ"/>
+                                            <constraint firstItem="cI0-Yv-z1H" firstAttribute="top" secondItem="Efd-Hk-JIB" secondAttribute="top" constant="20" id="dFF-dL-3Th"/>
                                             <constraint firstAttribute="width" secondItem="cI0-Yv-z1H" secondAttribute="width" id="gCv-7T-9up"/>
                                             <constraint firstAttribute="trailing" secondItem="cI0-Yv-z1H" secondAttribute="trailing" id="h8T-CW-bDb"/>
+                                            <constraint firstAttribute="bottom" secondItem="cI0-Yv-z1H" secondAttribute="bottom" constant="16" id="yF4-Q7-gRU"/>
                                         </constraints>
                                     </scrollView>
                                 </subviews>
                                 <animations/>
+                                <constraints>
+                                    <constraint firstItem="Efd-Hk-JIB" firstAttribute="top" secondItem="LKB-Ni-nCx" secondAttribute="top" constant="229" id="3uK-JZ-syu"/>
+                                    <constraint firstAttribute="trailing" secondItem="tYn-B0-P0S" secondAttribute="trailing" id="6mU-cl-T1a"/>
+                                    <constraint firstItem="tYn-B0-P0S" firstAttribute="width" secondItem="LKB-Ni-nCx" secondAttribute="width" id="JB5-66-ZOp"/>
+                                    <constraint firstItem="tYn-B0-P0S" firstAttribute="leading" secondItem="LKB-Ni-nCx" secondAttribute="leading" id="X69-uR-bm6"/>
+                                    <constraint firstItem="Efd-Hk-JIB" firstAttribute="leading" secondItem="LKB-Ni-nCx" secondAttribute="leading" id="zWt-KP-e1e"/>
+                                </constraints>
                                 <variation key="heightClass=regular-widthClass=regular" ambiguous="YES" misplaced="YES">
                                     <rect key="frame" x="20" y="69" width="696" height="926"/>
                                 </variation>
