--- a/realtors/realtors/Base.lproj/Main.storyboard
+++ b/realtors/realtors/Base.lproj/Main.storyboard
@@ -19,23 +19,23 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="117" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="2of-S0-rbY">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="80" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="2of-S0-rbY">
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                                 <animations/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="ListingCell" rowHeight="117" id="Tnw-9H-Eyq" customClass="ListingCell" customModule="realtors" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="92" width="414" height="117"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="ListingCell" rowHeight="80" id="Tnw-9H-Eyq" customClass="ListingCell" customModule="realtors" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="92" width="414" height="80"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Tnw-9H-Eyq" id="ARg-hV-FhK">
-                                            <rect key="frame" x="0.0" y="0.0" width="381" height="116.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="381" height="79.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <stackView opaque="NO" contentMode="scaleToFill" misplaced="YES" axis="vertical" alignment="top" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="y2X-dE-QP8">
-                                                    <rect key="frame" x="155" y="8" width="260" height="62"/>
+                                                <stackView opaque="NO" contentMode="scaleToFill" misplaced="YES" axis="vertical" distribution="fillEqually" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="y2X-dE-QP8">
+                                                    <rect key="frame" x="155" y="8" width="248" height="63"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Property Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0Z4-dK-5rJ">
-                                                            <rect key="frame" x="0.0" y="0.0" width="119" height="22"/>
+                                                            <rect key="frame" x="0.0" y="0.0" width="248" height="22"/>
                                                             <animations/>
                                                             <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
                                                             <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
@@ -45,7 +45,7 @@
                                                             </variation>
                                                         </label>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Summary" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hsU-0F-qWJ">
-                                                            <rect key="frame" x="0.0" y="42" width="73" height="21"/>
+                                                            <rect key="frame" x="0.0" y="42" width="248" height="22"/>
                                                             <animations/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                             <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
@@ -84,7 +84,6 @@
                                             <constraints>
                                                 <constraint firstItem="2Xu-GV-Wef" firstAttribute="top" secondItem="ARg-hV-FhK" secondAttribute="topMargin" id="P8i-Ef-cV3"/>
                                                 <constraint firstItem="y2X-dE-QP8" firstAttribute="leading" secondItem="2Xu-GV-Wef" secondAttribute="trailing" constant="5" id="TSI-2l-7oo"/>
-                                                <constraint firstItem="2Xu-GV-Wef" firstAttribute="leading" secondItem="ARg-hV-FhK" secondAttribute="leadingMargin" constant="-20" id="XG6-VR-r7D"/>
                                                 <constraint firstAttribute="trailingMargin" secondItem="y2X-dE-QP8" secondAttribute="trailing" id="cIA-gD-PVJ"/>
                                                 <constraint firstItem="y2X-dE-QP8" firstAttribute="top" secondItem="ARg-hV-FhK" secondAttribute="topMargin" id="u8C-QQ-vCJ"/>
                                             </constraints>
@@ -93,6 +92,9 @@
                                             </variation>
                                         </tableViewCellContentView>
                                         <animations/>
+                                        <constraints>
+                                            <constraint firstItem="2Xu-GV-Wef" firstAttribute="leading" secondItem="Tnw-9H-Eyq" secondAttribute="leading" id="uAe-ju-pCE"/>
+                                        </constraints>
                                         <connections>
                                             <outlet property="propertyImage" destination="2Xu-GV-Wef" id="dOp-Xe-QSW"/>
                                             <outlet property="propertyTitle" destination="0Z4-dK-5rJ" id="K0G-YC-et0"/>
