--- a/realtors/realtors/Base.lproj/Main.storyboard
+++ b/realtors/realtors/Base.lproj/Main.storyboard
@@ -10,7 +10,7 @@
         <!--Listings-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ListingsViewController" customModule="realtors" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController automaticallyAdjustsScrollViewInsets="NO" id="BYZ-38-t0r" customClass="ListingsViewController" customModule="realtors" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="JPt-tu-nnv"/>
                         <viewControllerLayoutGuide type="bottom" id="WF1-o1-TaS"/>
@@ -19,23 +19,23 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="80" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="2of-S0-rbY">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="80" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="2of-S0-rbY">
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                                 <animations/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="ListingCell" rowHeight="80" id="Tnw-9H-Eyq" customClass="ListingCell" customModule="realtors" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="92" width="414" height="80"/>
+                                        <rect key="frame" x="0.0" y="28" width="414" height="80"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Tnw-9H-Eyq" id="ARg-hV-FhK">
                                             <rect key="frame" x="0.0" y="0.0" width="381" height="79.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <stackView opaque="NO" contentMode="scaleToFill" misplaced="YES" axis="vertical" distribution="fillEqually" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="y2X-dE-QP8">
-                                                    <rect key="frame" x="155" y="8" width="248" height="63"/>
+                                                    <rect key="frame" x="155" y="8" width="253" height="63"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Property Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0Z4-dK-5rJ">
-                                                            <rect key="frame" x="0.0" y="0.0" width="248" height="22"/>
+                                                            <rect key="frame" x="0.0" y="0.0" width="253" height="22"/>
                                                             <animations/>
                                                             <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
                                                             <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
@@ -45,7 +45,7 @@
                                                             </variation>
                                                         </label>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Summary" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hsU-0F-qWJ">
-                                                            <rect key="frame" x="0.0" y="42" width="248" height="22"/>
+                                                            <rect key="frame" x="0.0" y="42" width="253" height="22"/>
                                                             <animations/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                             <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
@@ -83,7 +83,7 @@
                                             <animations/>
                                             <constraints>
                                                 <constraint firstItem="2Xu-GV-Wef" firstAttribute="top" secondItem="ARg-hV-FhK" secondAttribute="topMargin" id="P8i-Ef-cV3"/>
-                                                <constraint firstItem="y2X-dE-QP8" firstAttribute="leading" secondItem="2Xu-GV-Wef" secondAttribute="trailing" constant="5" id="TSI-2l-7oo"/>
+                                                <constraint firstItem="y2X-dE-QP8" firstAttribute="leading" secondItem="2Xu-GV-Wef" secondAttribute="trailing" id="TSI-2l-7oo"/>
                                                 <constraint firstAttribute="trailingMargin" secondItem="y2X-dE-QP8" secondAttribute="trailing" id="cIA-gD-PVJ"/>
                                                 <constraint firstItem="y2X-dE-QP8" firstAttribute="top" secondItem="ARg-hV-FhK" secondAttribute="topMargin" id="u8C-QQ-vCJ"/>
                                             </constraints>
@@ -111,9 +111,16 @@
                             <constraint firstItem="2of-S0-rbY" firstAttribute="top" secondItem="JPt-tu-nnv" secondAttribute="bottom" id="Rl8-55-Hiw"/>
                             <constraint firstAttribute="trailingMargin" secondItem="2of-S0-rbY" secondAttribute="trailing" id="SkF-Cj-GV1"/>
                             <constraint firstItem="WF1-o1-TaS" firstAttribute="top" secondItem="2of-S0-rbY" secondAttribute="bottom" id="TEj-ho-zZu"/>
+                            <constraint firstItem="2of-S0-rbY" firstAttribute="width" secondItem="IWJ-w1-CSJ" secondAttribute="width" id="vwU-XO-3y6"/>
                         </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="AWI-wW-bUB"/>
+                                <exclude reference="SkF-Cj-GV1"/>
+                            </mask>
+                        </variation>
                     </view>
-                    <navigationItem key="navigationItem" title="Listings" id="awD-z9-Y0b"/>
+                    <navigationItem key="navigationItem" title="Listings" id="2fH-6U-eJa"/>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina55"/>
                     <connections>
                         <outlet property="tableView" destination="2of-S0-rbY" id="Pof-sf-7ex"/>
@@ -203,7 +210,7 @@
                                                             <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
                                                         </variation>
                                                     </label>
-                                                    <stackView opaque="NO" contentMode="scaleToFill" misplaced="YES" alignment="top" translatesAutoresizingMaskIntoConstraints="NO" id="ciE-OC-cPD">
+                                                    <stackView opaque="NO" contentMode="scaleToFill" alignment="top" translatesAutoresizingMaskIntoConstraints="NO" id="ciE-OC-cPD">
                                                         <rect key="frame" x="98" y="21" width="179" height="20"/>
                                                         <subviews>
                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Summary" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MFP-JF-I5u">
@@ -217,11 +224,11 @@
                                                                     <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                                                 </variation>
                                                             </label>
-                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Value Change" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Neb-Vg-zNo">
+                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Value Change" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Neb-Vg-zNo">
                                                                 <rect key="frame" x="73" y="0.0" width="106" height="20"/>
                                                                 <animations/>
                                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                                 <nil key="highlightedColor"/>
                                                                 <variation key="heightClass=regular-widthClass=regular">
                                                                     <fontDescription key="fontDescription" type="system" pointSize="20"/>
@@ -230,7 +237,7 @@
                                                         </subviews>
                                                         <animations/>
                                                     </stackView>
-                                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" layoutMarginsFollowReadableWidth="YES" text="Features" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="LqA-C0-KQm">
+                                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" layoutMarginsFollowReadableWidth="YES" editable="NO" text="Features" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="LqA-C0-KQm">
                                                         <rect key="frame" x="12" y="41" width="350" height="405"/>
                                                         <animations/>
                                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
